# imagesoft

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  imgui.ini
images/: info.txt
src/: Contrast.frag  DynamicRangeCompression.frag  ExponentialNoise.frag  FilesystemAdapter.h  Filters.cpp  Filters.h  Gamma.frag  GaussianNoise.frag  ImageWindowState.cpp  ImageWindowState.h  KnownMask.cpp  KnownMask.h  Mask.frag  MedianMask.frag  RayleighNoise.frag  SaltAndPepperNoise.frag  Scalar.frag  ShaderLayer.cpp  ShaderLayer.h  SimpleFragmentShader.fragmentshader  Substract.frag  UIComponents.cpp  UIComponents.h  main.cpp
src/shaders/: ActiveBorderLevel.frag  ActiveBorderLevelCalculator.frag  Anisotropic.frag  BilateralFilter.frag  Canny.frag  CombinedMask.frag  Equalization.frag  ExponentialNoise.frag  HarrisCIM1.frag  LaplaceFirstPassMask.frag  LaplaceSecondPassMask.frag  Mask.frag  MedianMask.frag  Multiply.frag  Negative.frag  Passthrough.vert  RayleighNoise.frag  Scalar.frag  SimpleFragmentShader.fragmentshader  SingleBand.frag  Susan.frag  Threshold.frag
